--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Kropp Fitness</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
       <div class="header__inner">
         <a href="/" class="header__logo logo">
           <img
-            src="/images/logo.png"
+            src="images/logo.png"
             alt="Kropp logo"
             class="logo__image"
             width="135"
@@ -120,7 +120,7 @@
                 >
               </div>
               <img
-                src="/images/motivation/1.jpg"
+                src="images/motivation/1.jpg"
                 alt="a man stretching on a horizontal bar"
                 class="motivation-card__image"
                 width="518"
@@ -152,7 +152,7 @@
                 >
               </div>
               <img
-                src="/images/motivation/2.jpg"
+                src="images/motivation/2.jpg"
                 alt="A man lifts a dumbbell"
                 class="motivation-card__image"
                 width="518"
@@ -169,7 +169,7 @@
         <ul class="training-types__list container-wide">
           <li class="training-types__item">
             <img
-              src="/images/training-types/1.svg"
+              src="images/training-types/1.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -180,7 +180,7 @@
           </li>
           <li class="training-types__item">
             <img
-              src="/images/training-types/2.svg"
+              src="images/training-types/2.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -191,7 +191,7 @@
           </li>
           <li class="training-types__item">
             <img
-              src="/images/training-types/3.svg"
+              src="images/training-types/3.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -202,7 +202,7 @@
           </li>
           <li class="training-types__item">
             <img
-              src="/images/training-types/4.svg"
+              src="images/training-types/4.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -213,7 +213,7 @@
           </li>
           <li class="training-types__item">
             <img
-              src="/images/training-types/5.svg"
+              src="images/training-types/5.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -224,7 +224,7 @@
           </li>
           <li class="training-types__item">
             <img
-              src="/images/training-types/6.svg"
+              src="images/training-types/6.svg"
               alt=""
               class="training-types__image"
               width="150"
@@ -244,7 +244,7 @@
               src="/"
               width="960"
               height="600"
-              poster="/images/jpin-us-poster-video.jpg"
+              poster="images/jpin-us-poster-video.jpg"
             ></video>
             <button class="join-us__video-play-button" type="button">
               Play
@@ -341,7 +341,7 @@
         <div class="family__body container-wide">
           <img
             class="family__image"
-            src="/images/family/1.jpg"
+            src="images/family/1.jpg"
             alt="A human in training"
             width="414"
             height="479"
@@ -349,7 +349,7 @@
           />
           <img
             class="family__image"
-            src="/images/family/2.jpg"
+            src="images/family/2.jpg"
             alt="A human in training"
             width="744"
             height="479"
@@ -357,7 +357,7 @@
           />
           <img
             class="family__image"
-            src="/images/family/3.jpg"
+            src="images/family/3.jpg"
             alt="A human in training"
             width="396"
             height="479"
@@ -365,7 +365,7 @@
           />
           <img
             class="family__image"
-            src="/images/family/4.jpg"
+            src="images/family/4.jpg"
             alt="A human in training"
             width="396"
             height="479"
@@ -373,7 +373,7 @@
           />
           <img
             class="family__image"
-            src="/images/family/1.jpg"
+            src="images/family/1.jpg"
             alt="A human in training"
             width="414"
             height="479"
@@ -500,7 +500,7 @@
           <header class="footer__header">
             <a href="/" class="footer__logo logo">
               <img
-                src="/images/logo.png"
+                src="images/logo.png"
                 alt="Kropp logo"
                 class="logo__image"
                 width="270"
